--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: newsfeed_multiple_imageview
-description: Facebook type multiple news feed images view.
+name: feed_multimedia_gridview
+description: Facebook type multiple feed images and videos view.
 version: 1.0.0
-homepage: https://github.com/EjazAmir/newsfeed_multiple_imageview.git
+homepage: https://github.com/gcocenza/feed_multiple_imageview.git
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -13,7 +13,7 @@ dependencies:
 
   transparent_image: ^2.0.0
   flutter_image_slideshow: ^0.1.2
-
+  appinio_video_player: ^1.3.0
 
 dev_dependencies:
   flutter_test:
